--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: Montserrat;
-  src: url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-}
-
 *{
   margin: 0;
   padding: 0;
@@ -47,7 +42,7 @@ a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
 
-h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: 400;}
+h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: 400; line-height: 0.85;}
 
 ::placeholder{
   opacity: 1;
