--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,10 +1,9 @@
 .button{
-    padding: 1rem 2rem;
-    display: inline-block;
-    width: auto;
     border: solid 2px #FFFFFF;
+    padding: 1rem 2rem;
     transition: all 0.125s;
-    background-color: rgb(25, 25, 30, 50);
+    background-color: rgba(25, 25, 30, 0.5);
+    z-index: 1;
 }
 
 .button:hover{
