--- a/src/components/left_B/left_B.css
+++ b/src/components/left_B/left_B.css
@@ -5,9 +5,40 @@
     width: 100%;
     height: 100%;
     display: flex;
+}
+
+.left_B__container{
+    width: 70%;
+    height: 100%;
+    display: flex;
     row-gap: 1rem;
     flex-direction: column;
     justify-content: center;
     align-items: start;
     padding-left: 1.5rem;
 }
+
+.left_B__background{
+    width: 100%;
+    height: 100%;
+}
+
+.overlap{
+    z-index: 0;
+    position: absolute;
+    left: 35%;
+    width: max-content;
+    height: 100%;
+}
+
+.overlap::after{
+    background-image: linear-gradient(to right, rgb(25, 25, 30), rgb(0, 0, 0, 0));
+    content: '';
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
