--- a/src/components/Center_B/center_B.css
+++ b/src/components/Center_B/center_B.css
@@ -1,7 +1,30 @@
 .center_B{
-    position: absolute;
-    bottom: 0;
     top: 0;
-    height: 100vh;
+    bottom: 0;
+    position: absolute;
+    height: 100%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.center_B__container{
+    border-right: 2px solid #FFFFFF;
+    border-left: 2px solid #FFFFFF;
+    max-width: 50%;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    align-items: center;
+}
+
+.center_B__background{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
 }
