--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,7 @@
 .header{
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     top: 0;
+    backdrop-filter: blur(10px);
 }
