--- a/src/components/css-quiz/intro.css
+++ b/src/components/css-quiz/intro.css
@@ -1,12 +1,33 @@
-.start_game {
-    margin-top: 20px;
-    border: solid 2px #FFFFFF;
-    padding: 1rem 2rem;
-    transition: all 0.125s;
+.intro-section .button {
+    margin-top: 10px;
+  }
+
+
+  .intro-section {
+    margin-top: 50px;
+    text-align: left;
   }
   
-  .start_game:hover {
-    background-color: white;
-    color: black;
+  .intro-section h2 {
+    font-weight: bold;
+    margin-bottom: 30px;
   }
+  
+  .intro-section p {
+    margin-bottom: 15px;
+  }
+  
+  .intro-section ul {
+    margin-top: 20px;
+    padding-left: 20px;
+  }
+  
+  .intro-section ul li {
+    margin-bottom: 15px;
+  }
+  
+  .intro-section strong {
+    font-weight: bold;
+  }
+  
 
