--- a/src/components/css-quiz/questions.css
+++ b/src/components/css-quiz/questions.css
@@ -10,7 +10,7 @@
   top: 300px;
   right: 80px;
   max-width: 800px;
-  text-align: right;
+  text-align: center;
   font-size: 30px;
 }
 
@@ -66,7 +66,7 @@
   margin-left: 15px;
   margin-right: 25px;
   border: 3px solid #ccc;
-  border-radius: 50%; /* для круга, для квадрата можно убрать */
+  border-radius: 50%; 
   background-color: #ffffff00;
   transition: background-color 0.2s, border-color 0.2s;
 }
