--- a/src/components/css-quiz/questions/questions.css
+++ b/src/components/css-quiz/questions/questions.css
@@ -52,6 +52,13 @@
   display: none;
 }
 
+.question .button:hover {
+  transition: all 0.2s;
+  background-color: darkgreen;
+  color: white;
+  border-color: darkgreen;
+}
+
 .question label {
   display: flex;
   align-items: center;
