--- a/src/components/paragraph/paragraph.css
+++ b/src/components/paragraph/paragraph.css
@@ -1,3 +1,15 @@
-.p {
+.paragraph{
     z-index: 1;
-} 
+}
+
+.footerParagraph{
+    font-size: 1.25rem;
+}
+
+.footerParagraphRight{
+    font-size: 1.25rem;
+    color: rgba(255, 255, 255, 0.589);
+    position: absolute;
+    right: 32px;
+    bottom: 32px;
+}
