--- a/src/components/css-grid/components/board/board.css
+++ b/src/components/css-grid/components/board/board.css
@@ -25,34 +25,48 @@
 }
 
 #soil {
-    background-color: #523D1F;
     overflow: hidden;
+    background-image: url("../../assets/grass.svg");
+    border-radius: 2px #291f0e;
 }
 
 .plot {
     width: 100%;
     height: 100%;
-    background-color: #6F532A;
-    background-color: #836B32;
-    background-image: url('../../assets/dirt.svg');
-    background-size: repeat;
+    background-image: url("../../assets/dirt.svg");
+    border: 1px solid #291f0e;
+    position: relative;
 }
 
-.plant,
+.plant {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    background-repeat: repeat;
+}
+
 .treatment {
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: hidden;
     z-index: 5;
+    background-repeat: repeat;
 }
 
-.plant .bg,
+.plant .bg {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: repeat;
+    background-size: 15%;
+}
 .treatment .bg {
     width: 100%;
     height: 100%;
-    background-position: left top;
-    background-size: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .plant.carrot .bg {
@@ -64,14 +78,44 @@
 }
 
 .treatment.carrot .bg {
-    background-color: rgba(81, 140, 179, 1);
     background-image: url("../../assets/water.svg");
-    background-size: repeat;
-    opacity: 50%;
+    opacity: 33%;
 }
 
 .treatment.weed .bg {
-    background-color: #63393E;
-    background-image: url("../../assets/poison.svg");
-    opacity: 50%;
+    background-image: url("../../assets//poison.svg");
+    opacity: 66%;
+}
+
+.grid-column-start-1 {
+    grid-column-start: 1;
+}
+
+.grid-column-start-2 {
+    grid-column-start: 2;
+}
+
+.grid-column-start-5 {
+    grid-column-start: 5;
+}
+
+.grid-column-end-6 {
+    grid-column-end: 6;
+}
+
+.grid-column-4 {
+    grid-column: 4;
+    grid-row: 1 / 6;
+}
+
+.grid-area-1-1-6-2 {
+    grid-area: 1 / 1 / 6 / 2;
+}
+
+.grid-area-5-1-6-6 {
+    grid-area: 5 / 1 / 6 / 6;
+}
+
+.grid-area-1-5-6-6 {
+    grid-area: 1 / 5 / 6 / 6;
 }
