--- a/src/components/css-grid/components/sidebar/sidebar.css
+++ b/src/components/css-grid/components/sidebar/sidebar.css
@@ -19,7 +19,7 @@
     height: 100%;
     padding: 2em;
     font-size: 15px;
-    background-color: rgb(140, 200, 120);
+    background-color: rgb(25, 25, 30);
     overflow-y: auto;
 }
 
@@ -71,7 +71,7 @@ pre {
     height: 24px;
     margin-left: 16px;
     border: none;
-    font-family: 'Source Code Pro', monospace;
+    font-family: Montserrat;
     font-size: 16px;
     outline: none;
     resize: none;
@@ -79,28 +79,39 @@ pre {
     color: rgb(20, 20, 20);
 }
 
-#level-counter {
-    position: relative;
-    display: inline-block;
-    height: 30px;
-    margin-top: 0.5rem;
-    font-size: 15px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
 #levelsWrapper {
+    display: flex;
+    flex-direction: column;
     top: 30px;
     width: calc(100% - 16px);
     padding: 1em 0.5em;
-    margin-top: 12px;
+    margin-top: 1em;
     z-index: 80;
+    align-items: center;
 }
 
-#levels {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+#levelsChange {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+#levelChangeSpan {
+    margin-left: 1em;
+    margin-right: 1em;
+}
+
+.translate {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: solid 2px rgb(20, 20, 20);
+    color: rgb(20, 20, 20);
+    padding: 0.5rem 0.5rem;
+}
+
+#guessHistory {
+    margin-top: 0.5em;
+    margin-bottom: 3em;
 }
