--- a/src/components/html-game/AnswerForm.css
+++ b/src/components/html-game/AnswerForm.css
@@ -1,26 +1,32 @@
+/* AnswerForm.css */
 .answer-form {
-    width: 60%; /* Увеличили ширину формы */
-    padding: 20px;
-    background-color: #f4f4f4;
-    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .answer-form textarea {
     width: 100%;
-    height: 200px; /* Увеличили высоту текстовой области */
-    margin-bottom: 10px;
-    color: #19191E;
-    resize: none; /* Убрали возможность изменения размера */
-    padding: 10px; /* Добавили padding для лучшего отображения текста */
+    height: 150px;
+    padding: 10px;
+    font-family: monospace;
     font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: none;
 }
 
 .answer-form button {
     padding: 10px 20px;
-    background-color: #282c34;
-    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #007bff;
+    color: #fff;
     border: none;
-    border-radius: 5px;
-    cursor: pointer; /* Добавили указатель курсора */
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
 }
 
+.answer-form button:hover {
+    background-color: #0056b3;
+}
