--- a/src/components/html-game/HTMLGame.css
+++ b/src/components/html-game/HTMLGame.css
@@ -2,6 +2,7 @@
     display: flex;
     height: 100vh;
     width: 100%;
+    font-family: Arial, sans-serif;
 }
 
 .left-column {
@@ -30,6 +31,11 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.task-button:hover {
+    background-color: #404652;
 }
 
 .task-button.active {
@@ -42,13 +48,13 @@
     margin-top: 10px;
 }
 
-
-
 .answer-form {
     width: 100%;
     padding: 20px;
     background-color: #f4f4f4;
     border-radius: 10px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
 }
 
 .answer-form textarea {
@@ -59,6 +65,9 @@
     resize: none;
     padding: 10px;
     font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-family: monospace;
 }
 
 .answer-form button {
@@ -68,16 +77,28 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
+.answer-form button:hover {
+    background-color: #404652;
+}
 
 .right-column {
+    margin-top: 90px;
     flex: 1;
     padding: 20px;
-    background-color: #FFFFFF;
     color: #19191E;
     border-left: 1px solid #ddd;
     overflow-y: auto;
     box-sizing: border-box;
+    min-height: 100vh;
+    background-color: #00007c;
 }
 
+.preview {
+    padding: 20px;
+
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
