--- a/src/components/html-game/HTMLGame.css
+++ b/src/components/html-game/HTMLGame.css
@@ -92,6 +92,6 @@
     border-left: 1px solid #ddd;
     overflow-y: auto;
     box-sizing: border-box;
-    background-color: #ffffff;
+    background-color: #65787c;
 }
 
