--- a/src/components/html-game/Visualizer.css
+++ b/src/components/html-game/Visualizer.css
@@ -27,9 +27,18 @@
     margin: 10px 0;
 }
 
-.preview table, .preview td, .preview tr {
+.preview table {
     color: #19191E;
     margin: 10px 0;
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+.preview td, .preview tr, .preview th{
+    margin: 10px 0;
+    color: #19191E;
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px;
 }
 
 .preview ul {
@@ -88,6 +97,11 @@
     border-radius: 5px;
     width: 100%;
     box-sizing: border-box;
+    pointer-events: auto;
+}
+.preview input[type="text"]::placeholder {
+    color: #888; /* Цвет текста плейсхолдера */
+    font-style: italic; /* Курсив для текста плейсхолдера */
 }
 
 .preview ul, .preview ol {
