--- a/src/components/css-grid/components/board/board.css
+++ b/src/components/css-grid/components/board/board.css
@@ -26,14 +26,14 @@
 
 #soil {
     overflow: hidden;
-    background-image: url("../../assets/grass.svg");
-    border-radius: 2px #291f0e;
+    background-image: url("/assets/css-grid/grass.svg");
+    border-radius: 2px;
 }
 
 .plot {
     width: 100%;
     height: 100%;
-    background-image: url("../../assets/dirt.svg");
+    background-image: url("/assets/css-grid/dirt.svg");
     border: 1px solid #291f0e;
     position: relative;
 }
@@ -70,20 +70,20 @@
 }
 
 .plant.carrot .bg {
-    background-image: url("../../assets/carrot.svg");
+    background-image: url("/assets/css-grid/carrot.svg");
 }
 
 .plant.weed .bg {
-    background-image: url("../../assets/weed.svg");
+    background-image: url("/assets/css-grid/weed.svg");
 }
 
 .treatment.carrot .bg {
-    background-image: url("../../assets/water.svg");
+    background-image: url("/assets/css-grid/water.svg");
     opacity: 33%;
 }
 
 .treatment.weed .bg {
-    background-image: url("../../assets//poison.svg");
+    background-image: url("/assets/css-grid/poison.svg");
     opacity: 66%;
 }
 
